--- a/car_project/templates/add_car_for_rent.html
+++ b/car_project/templates/add_car_for_rent.html
@@ -11,29 +11,29 @@
         {% csrf_token %}
         
         <label for="name">Car Name:</label>
-        <input type="text" name="name" required><br>
+        <input type="text" name="name" required><br><br>
     
         <label for="brand">Brand:</label>
-        <input type="text" name="brand" required><br>
+        <input type="text" name="brand" required><br><br>
 
         <label for="oil_type">Oil Type:</label>
         <select name="oil_type" required>
             <option value="Petrol">Petrol</option>
             <option value="Diesel">Diesel</option>
             <option value="Electric">Electric</option>
-        </select><br>
+        </select><br><br>
 
         <label for="description">Description:</label>
-        <textarea name="description" rows="4" cols="50"></textarea><br>
+        <textarea name="description" rows="4" cols="50"></textarea><br><br>
     
         <label for="price">Price Per Day:</label>
-        <input type="number" name="price_per_day" step="0.01" required><br>
+        <input type="number" name="price_per_day" step="0.01" required><br><br>
     
         <label for="mileage">Mileage:</label>
-        <input type="number" name="mileage" step="0.01" required><br>
+        <input type="number" name="mileage" step="0.01" required><br><br>
     
         <label for="front_image">Car Image:</label>
-        <input type="file" name="rent_car_image" accept="image/*"><br>
+        <input type="file" name="rent_car_image" accept="image/*"><br><br>
     
         <button type="submit">Add Car</button>
     </form>
