--- a/car_project/templates/list_my_cars_for_rent.html
+++ b/car_project/templates/list_my_cars_for_rent.html
@@ -58,7 +58,7 @@
                                 <p>No Image</p>
                             {% endif %}
                         </td>
-                        <td> <button> Edit Car </button> </td>
+                        <td><a href="{% url 'edit_my_rent_cars' %}">  <button> Edit Car </button> </a></td>
                         <td> <button> Delete Car </button> </td>
                     </tr>
                 {% endfor %}
