--- a/car_project/templates/edit_my_rent_cars.html
+++ b/car_project/templates/edit_my_rent_cars.html
@@ -13,31 +13,41 @@
         {% csrf_token %}
         
         <label for="name">Car Name:</label>
-        <input type="text" name="name" required><br><br>
+        <input type="text" name="name" value="{{ car.name }}" required><br><br>
     
         <label for="brand">Brand:</label>
-        <input type="text" name="brand" required><br><br>
+        <select name="brand">
+            {% for brand in brands %}
+                <option value="{{ brand.id }}" {% if car.brand.id == brand.id %}selected{% endif %}>{{ brand.name }}</option>
+            {% endfor %}
+        </select><br><br>
 
         <label for="oil_type">Oil Type:</label>
-        <select name="oil_type" required>
-            <option value="Petrol">Petrol</option>
-            <option value="Diesel">Diesel</option>
-            <option value="Electric">Electric</option>
+        <select name="oil_type">
+            {% for oil in oil_types %}
+                <option value="{{ oil.id }}" {% if car.oil_type.id == oil.id %}selected{% endif %}>{{ oil.oil_type }}</option>
+            {% endfor %}
         </select><br><br>
 
         <label for="description">Description:</label>
-        <textarea name="description" rows="4" cols="50"></textarea><br><br>
+        <textarea name="description" rows="4" cols="50">{{ car.description }}</textarea><br><br>
+    
     
         <label for="price">Price Per Day:</label>
-        <input type="number" name="price_per_day" step="0.01" required><br><br>
+        <input type="number" name="price_per_day" value="{{ car.price_per_day }}" step="0.01" required><br><br>
     
         <label for="mileage">Mileage:</label>
-        <input type="number" name="mileage" step="0.01" required><br><br>
+        <input type="number" name="mileage" value="{{ car.mileage }}" step="0.01" required><br><br>
     
         <label for="front_image">Car Image:</label>
-        <input type="file" name="rent_car_image" accept="image/*"><br><br>
-    
-        <button type="submit">Add Car</button>
+        <input type="file" name="rent_car_image" accept="image/*">
+        {% if car.rent_car_image %}
+            <p>Current:</p>
+            <img src="{{ car.rent_car_image.url }}" alt="Right Side Image" width="100">
+        {% endif %}
+        
+        <br><br>
+        <button type="submit">Save Changes</button>
     </form>
 </body>
 </html>
